Fix include order in default template

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,15 +4,16 @@
   <meta charset="utf-8">
   <title>{{ page.title }}</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="fonts/bootstrap-icons.min.css" rel="stylesheet">
 </head>
 <body>
-  <script src="js/bootstrap.bundle.min.js"></script>
   
   <main class="container my-4">
     {{ content }}
   </main>
 
   {% include footer.html %}
+
+  <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
