--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,6 +7,7 @@
   <link href="fonts/bootstrap-icons.min.css" rel="stylesheet">
 </head>
 <body>
+  {% include header.html %}
   
   <main class="container my-4">
     {{ content }}
